--- a/index.html
+++ b/index.html
@@ -128,8 +128,8 @@
 
       const ddd = ddds[Math.floor(Math.random() * ddds.length)];
       const inicio = Math.floor(9000 + Math.random() * 1000);
-      const fim = Math.floor(1000 + Math.random() * 9000);
-      const numero = `+55 ${ddd} 9${inicio}‑${fim}`;
+      const fim = "****";
+      const numero = `+55 ${ddd} 9${inicio}-${fim}`;
 
       const hora = String(Math.floor(Math.random() * 24)).padStart(2, "0") + ":" +
                    String(Math.floor(Math.random() * 60)).padStart(2, "0") + "h";
