--- a/index.html
+++ b/index.html
@@ -7,61 +7,68 @@
   <style>
     body {
       font-family: Arial, sans-serif;
-      background-color: #ffffff;
+      background-color: #f8f8f8;
+      margin: 0;
       text-align: center;
-      padding: 30px;
       color: #222;
+    }
+
+    header {
+      background-color: #fff;
+      border-bottom: 1px solid #ccc;
+      padding: 20px 10px;
+      position: sticky;
+      top: 0;
+      z-index: 999;
+    }
+
+    header .top-button {
+      background-color: #28a745;
+      color: #fff;
+      font-size: 16px;
+      padding: 10px 20px;
+      border-radius: 8px;
+      text-decoration: none;
+      font-weight: bold;
     }
 
     h1 {
       color: #111;
       font-size: 24px;
-      font-weight: bold;
+      margin: 10px 0;
     }
 
     .alerta {
       color: #cc0000;
       font-weight: bold;
-      margin-top: 10px;
       font-size: 16px;
+      margin-bottom: 15px;
     }
 
     .preco {
       font-size: 20px;
       color: #28a745;
       font-weight: bold;
-      margin-top: 10px;
+      margin: 15px 0;
     }
 
-    .beneficios {
+    .beneficios, .feedbacks {
       text-align: left;
       display: inline-block;
       margin: 20px auto;
       font-size: 15px;
       line-height: 1.6;
+      background-color: #fff;
+      padding: 20px;
+      border-radius: 8px;
+      box-shadow: 0 0 10px rgba(0,0,0,0.05);
     }
 
     .contador {
-      font-size: 18px;
+      font-size: 16px;
       color: #cc0000;
       font-weight: bold;
-      margin-top: 20px;
-    }
-
-    .barra-progresso {
-      width: 100%;
-      background-color: #eee;
-      border-radius: 10px;
-      overflow: hidden;
-      margin-top: 10px;
-      height: 14px;
-    }
-
-    .progresso {
-      height: 14px;
-      background-color: #28a745;
-      width: 100%;
-      transition: width 1s linear;
+      margin: 30px 0 10px;
     }
 
     .hotmart__button-checkout {
@@ -75,17 +82,12 @@
       margin-top: 20px;
       display: inline-block;
       text-decoration: none;
-      animation: pulse 1.5s infinite;
+      font-weight: bold;
+      box-shadow: 0 4px 6px rgba(0,0,0,0.1);
     }
 
     .hotmart__button-checkout:hover {
-      background-color: #218838;
-    }
-
-    @keyframes pulse {
-      0% { transform: scale(1); }
-      50% { transform: scale(1.07); }
-      100% { transform: scale(1); }
+      background-color: #1e7e34;
     }
 
     .selo-container {
@@ -104,15 +106,6 @@
       color: #333;
     }
 
-    .feedbacks {
-      text-align: left;
-      display: inline-block;
-      margin: 10px auto;
-      font-size: 13px;
-      line-height: 1.6;
-      color: #555;
-    }
-
     .rodape {
       font-size: 11px;
       margin-top: 40px;
@@ -122,6 +115,25 @@
     .icone-alerta {
       font-size: 40px;
       color: #cc0000;
+      margin-top: 20px;
+    }
+
+    .barra-fixa {
+      position: fixed;
+      bottom: 0;
+      left: 0;
+      width: 100%;
+      background: #28a745;
+      color: #fff;
+      font-weight: bold;
+      padding: 10px;
+      z-index: 999;
+    }
+
+    .barra-fixa a {
+      color: #fff;
+      text-decoration: none;
+      font-size: 16px;
     }
   </style>
 
@@ -129,16 +141,12 @@
     function iniciarContador() {
       let tempo = 900;
       const contadorEl = document.getElementById("contador");
-      const progressoEl = document.getElementById("progresso");
 
       const intervalo = setInterval(() => {
         const minutos = String(Math.floor(tempo / 60)).padStart(2, '0');
         const segundos = String(tempo % 60).padStart(2, '0');
         contadorEl.textContent = `${minutos}:${segundos}`;
         tempo--;
-
-        const porcentagem = (tempo / 900) * 100;
-        progressoEl.style.width = `${porcentagem}%`;
 
         if (tempo < 0) {
           clearInterval(intervalo);
@@ -167,7 +175,7 @@
     };
   </script>
 
-  <!-- HOTMART -->
+  <!-- HOTMART WIDGET -->
   <script type="text/javascript">
     function importHotmart(){ 
       var imported = document.createElement('script'); 
@@ -181,61 +189,67 @@
     } 
     importHotmart(); 
   </script>
-
 </head>
+
 <body>
 
-  <div>
-    <div class="icone-alerta">🚨</div>
-    <h1><strong>IA WhatsApp Protect</strong> – Alerta de Segurança Ativado</h1>
+  <header>
+    <a href="https://pay.hotmart.com/P100520919B?checkoutMode=2&off=7kov1jba" class="top-button">🛡️ Ativar Proteção Agora</a>
+  </header>
 
-    <p class="alerta">
-      Atividade suspeita detectada no número <strong id="numero">+55 11 9XXXX‑4026</strong><br>
-      Localização: <strong id="cidadehora">São Paulo – 01:24h</strong>
-    </p>
+  <div class="icone-alerta">🚨</div>
+  <h1><strong>IA WhatsApp Protect</strong> – Alerta de Segurança Ativado</h1>
 
-    <p class="preco">🛡️ Proteção imediata por apenas R$ 4,90</p>
+  <p class="alerta">
+    Atividade suspeita detectada no número <strong id="numero">+55 11 9XXXX‑4026</strong><br>
+    Localização: <strong id="cidadehora">São Paulo – 01:24h</strong>
+  </p>
 
-    <p>Seu WhatsApp foi marcado para ativação de emergência.<br>
-    O sistema <strong>IA WhatsApp Protect</strong> está bloqueando ameaças em tempo real com tecnologia de Inteligência Artificial.</p>
+  <p class="preco">✅ Proteção imediata por apenas R$ 4,90</p>
 
-    <div class="beneficios">
-      <ul>
-        <li>✔️ Inteligência Artificial com escaneamento 24h</li>
-        <li>✔️ Ativação automática via Navegador</li>
-        <li>✔️ Garantia de segurança digital e reembolso imediato</li>
-        <li>✔️ Suporte 24h via canal prioritário</li>
-      </ul>
-    </div>
+  <p>Seu WhatsApp foi marcado para ativação de emergência.<br>
+  O sistema <strong>IA WhatsApp Protect</strong> está bloqueando ameaças em tempo real com tecnologia de Inteligência Artificial.</p>
 
-    <p class="prova-social">🔒 5.423 usuários ativaram hoje</p>
+  <div class="beneficios">
+    <ul>
+      <li>✔️ Inteligência Artificial com escaneamento 24h</li>
+      <li>✔️ Ativação automática via navegador</li>
+      <li>✔️ Garantia de segurança digital e reembolso imediato</li>
+      <li>✔️ Suporte 24h via canal prioritário</li>
+    </ul>
+  </div>
 
-    <div class="feedbacks">
-      <p>🗣️ “Me salvou de um golpe no WhatsApp!” — <strong>Ana, RJ</strong></p>
-      <p>🗣️ “Simples, rápido e me deixou muito mais tranquilo.” — <strong>Eduardo, SP</strong></p>
-      <p>🗣️ “Achei que fosse vírus, mas era proteção real. Aprovado.” — <strong>Sandra, DF</strong></p>
-      <p>🗣️ “Recebi o alerta, paguei R$ 4,90 e fui protegido na hora.” — <strong>Marcos, MG</strong></p>
-      <p>🗣️ “Sistema inteligente, seguro e barato. Obrigado!” — <strong>Lívia, BA</strong></p>
-    </div>
+  <p class="prova-social">🔒 5.423 usuários ativaram hoje</p>
 
-    <p class="contador">⏱️ Oferta expira em <span id="contador">15:00</span></p>
-    <div class="barra-progresso"><div id="progresso" class="progresso"></div></div>
+  <div class="feedbacks">
+    <p>🗣️ “Me salvou de um golpe no WhatsApp!” — <strong>Ana, RJ</strong></p>
+    <p>🗣️ “Simples, rápido e me deixou muito mais tranquilo.” — <strong>Eduardo, SP</strong></p>
+    <p>🗣️ “Achei que fosse vírus, mas era proteção real. Aprovado.” — <strong>Sandra, DF</strong></p>
+    <p>🗣️ “Recebi o alerta, paguei R$ 4,90 e fui protegido na hora.” — <strong>Marcos, MG</strong></p>
+    <p>🗣️ “Sistema inteligente, seguro e barato. Obrigado!” — <strong>Lívia, BA</strong></p>
+  </div>
 
-    <!-- BOTÃO DE CHECKOUT HOTMART -->
-    <a href="https://pay.hotmart.com/P100520919B?checkoutMode=2&off=7kov1jba" 
-       class="hotmart-fb hotmart__button-checkout">
-      🟢 Ativar Proteção Agora – Checkout Hotmart
-    </a>
+  <p class="contador">⏱️ Oferta expira em <span id="contador">15:00</span></p>
 
-    <div class="selo-container">
-      <img src="https://cdn-icons-png.flaticon.com/512/733/733585.png" alt="WhatsApp" title="WhatsApp">
-      <img src="https://logospng.org/download/pix/logo-pix-icone-512.png" alt="Pix" title="Pagamento via Pix">
-    </div>
+  <a href="https://pay.hotmart.com/P100520919B?checkoutMode=2&off=7kov1jba" 
+     class="hotmart-fb hotmart__button-checkout">
+    ✅ Ativar Proteção Agora – Checkout Hotmart
+  </a>
 
-    <p class="rodape">
-      100% Seguro • Política de Privacidade • Garantia de Reembolso<br>
-      Este site não é afiliado ao WhatsApp Inc. nem ao Google LLC.
-    </p>
+  <div class="selo-container">
+    <img src="https://cdn-icons-png.flaticon.com/512/733/733585.png" alt="WhatsApp">
+    <img src="https://logospng.org/download/pix/logo-pix-icone-512.png" alt="Pix">
+    <img src="https://cdn-icons-png.flaticon.com/512/890/890173.png" alt="Cadeado"> 
+    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/89/Hotmart-logo.png/600px-Hotmart-logo.png" alt="Hotmart" height="28">
+  </div>
+
+  <p class="rodape">
+    🔒 Pagamento 100% Seguro • Garantia de Reembolso em 30 dias<br>
+    Política de Privacidade • Este site não é afiliado ao WhatsApp Inc. nem ao Google LLC.
+  </p>
+
+  <div class="barra-fixa">
+    <a href="https://pay.hotmart.com/P100520919B?checkoutMode=2&off=7kov1jba">🛡️ Ativar Proteção Agora – Checkout Hotmart</a>
   </div>
 
 </body>
