--- a/index.html
+++ b/index.html
@@ -52,6 +52,19 @@
       margin: 15px 0;
     }
 
+    .frase-impacto {
+      color: #cc0000;
+      font-weight: bold;
+      font-size: 18px;
+      margin-top: 10px;
+    }
+
+    .urgente {
+      color: red;
+      font-size: 16px;
+      margin-bottom: 10px;
+    }
+
     .beneficios, .feedbacks {
       text-align: left;
       display: inline-block;
@@ -175,7 +188,6 @@
     };
   </script>
 
-  <!-- HOTMART WIDGET -->
   <script type="text/javascript">
     function importHotmart(){ 
       var imported = document.createElement('script'); 
@@ -200,6 +212,8 @@
   <div class="icone-alerta">🚨</div>
   <h1><strong>IA WhatsApp Protect</strong> – Alerta de Segurança Ativado</h1>
 
+  <p class="frase-impacto">⚠️ Seu WhatsApp pode ser desativado!</p>
+
   <p class="alerta">
     Atividade suspeita detectada no número <strong id="numero">+55 11 9XXXX‑4026</strong><br>
     Localização: <strong id="cidadehora">São Paulo – 01:24h</strong>
@@ -207,15 +221,19 @@
 
   <p class="preco">✅ Proteção imediata por apenas R$ 4,90</p>
 
-  <p>Seu WhatsApp foi marcado para ativação de emergência.<br>
-  O sistema <strong>IA WhatsApp Protect</strong> está bloqueando ameaças em tempo real com tecnologia de Inteligência Artificial.</p>
+  <p class="urgente">Último aviso antes do bloqueio total do WhatsApp.</p>
+
+  <p>
+    Alguém pode estar tentando clonar seu número ou acessar seus dados.
+    Não proteja depois — <strong>ative agora</strong> para garantir:
+  </p>
 
   <div class="beneficios">
     <ul>
-      <li>✔️ Inteligência Artificial com escaneamento 24h</li>
-      <li>✔️ Ativação automática via navegador</li>
-      <li>✔️ Garantia de segurança digital e reembolso imediato</li>
-      <li>✔️ Suporte 24h via canal prioritário</li>
+      <li>✔️ Escaneamento IA 24h contra ameaças e golpes</li>
+      <li>✔️ Bloqueio preventivo de invasores em tempo real</li>
+      <li>✔️ Reembolso imediato se sua conta for comprometida</li>
+      <li>✔️ Suporte emergencial com prioridade total</li>
     </ul>
   </div>
 
