--- a/index.html
+++ b/index.html
@@ -143,11 +143,11 @@
   <div class="subheadline">Seu WhatsApp pode ser <strong>DESATIVADO</strong> a qualquer momento!</div>
 
   <div class="ia-info">
-    Ativado automaticamente pelo protocolo IA WhatsApp Protect — sistema autônomo de inteligência artificial.
+    Proteção Ativada automaticamente pelo protocolo IA WhatsApp Protect — sistema autônomo de Inteligência Artificial.
   </div>
 
   <div class="alerta">
-    Detectamos atividade suspeita no número:  
+    Detectamos atividade suspeita pelo número:  
     <br><strong id="numero"></strong>  
     <div class="local-info">📍 Localização aproximada: <span id="cidade"></span></div>
     <div class="preco">🛡️ Proteção Urgente Requerida</div>
